--- a/oop12_1_emulator_QueuePrinter/oop12_1_emulator_QueuePrinter.vcxproj
+++ b/oop12_1_emulator_QueuePrinter/oop12_1_emulator_QueuePrinter.vcxproj
@@ -140,10 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Queue.cpp" />
     <ClCompile Include="QueuePriority.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Queue.h" />
     <ClInclude Include="QueuePriority.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
