--- a/oop12_1_emulator_QueuePrinter/oop12_1_emulator_QueuePrinter.vcxproj.filters
+++ b/oop12_1_emulator_QueuePrinter/oop12_1_emulator_QueuePrinter.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="QueuePriority.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Queue.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="User.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="QueuePriority.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Queue.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
