--- a/oop12_1_emulator_QueuePrinter/oop12_1_emulator_QueuePrinter.vcxproj.filters
+++ b/oop12_1_emulator_QueuePrinter/oop12_1_emulator_QueuePrinter.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Queue.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Printer.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="User.h">
@@ -36,6 +39,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Queue.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Printer.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
